# opencast-bot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  cli.py  config.py  generator.py  main.py
bot/db/: __init__.py  json_orm.py
bot/models/: __init__.py  category.py  content_seeds.py  topic.py
bot/publisher/: __init__.py  telegram.py  twitter.py
bot/utils/: __init__.py  exceptions.py  logging.py
categories/: ai-powered-development.json  cicd-tactics.json  clean-git-practices.json  cloud-native-design.json  code-performance-tips.json  devex-insights.json  frontend-architecture.json  modern-frontend-practices.json  secure-coding-2025.json  testing-modern-stacks.json
scripts/: run_bot.py  run_bot_simple.py
tests/: __init__.py  test_cli.py  test_config.py  test_e2e.py  test_generator.py  test_integration.py  test_json_orm.py  test_main.py  test_models_category.py  test_models_topic.py  test_publisher_telegram.py  test_publisher_twitter.py  test_utils_exceptions.py  test_utils_logging.py
